Update GET METHOD FORM SUBMISSION.html

--- a/Java Script/GET METHOD FORM SUBMISSION.html
+++ b/Java Script/GET METHOD FORM SUBMISSION.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>Form Validation</title>
+      <title >Form Validation</title>
          <script type = "text/javascript">
          function validate() {
          var text;
@@ -54,8 +54,19 @@
                <td><input type = "text" name = "email" /></td>
             </tr>
             <tr>
+            <td align = "right">Gender:</td>
+            <td><input type="radio" name ="male"/>Male
+            <input type="radio" name ="female"/>Female
+            <input type="radio" name ="other"/>Other<br>
+            </td>
+            <br>
+            </tr>
+            <tr>
                <td align = "right">Phone Number</td>
-               <td><input type = "text" name = "phone" /></td>
+               <td>
+               <input type="text" name=countrycode" value="+91" size="2"/>
+               <input type = "text" name = "phone" />
+               </td>
             </tr>
             <tr>
                <td align = "right">Subject</td>
