--- a/Java Script/GET METHOD FORM SUBMISSION.html
+++ b/Java Script/GET METHOD FORM SUBMISSION.html
@@ -1,6 +1,12 @@
 <html>
    <head>
       <title >Form Validation</title>
+      <style>
+      input,select,option,textarea{
+         background-color:wheat;
+         color:black;
+      }
+      </style>
          <script type = "text/javascript">
          function validate() {
          var text;
@@ -41,7 +47,7 @@
          }
       </script>
    </head>
-   <body>
+   <body style="background-color:powderblue;">
       <form action = "" name = "myForm" onsubmit = "return(validate());">
         <h1 align="center">USER REGISTRATION</H1>
          <table align="center" cellspacing = "3" cellpadding = "3" border = "3">
@@ -78,11 +84,19 @@
                      <option value = "3">CSS</option>
                      <option value = "4">JSP</option>
                   </select>
+                  </tr>
+                  <tr>
                </td>
-            </tr>
+               <td align="right">Address</td>
+               <td>
+               <textarea cols="80" rows="10" value="address">
+               </textarea>
+               </td>
+               </tr>
+            
          </table>
          <p id="demo" style="color:red; text-align:center"></p>
-   <div style="text-align:center"><input type = "submit" value = "Submit" /></div>
+   <div style="text-align:center;"><input type = "submit" value = "Submit" /></div>
       </form>
    </body>
 </html>
